[project]
name = "datacopilot-simple-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=5.24",
    "python-dotenv>=1.0",
    "sqlglot>=25.0",
    "streamlit>=1.38",
]
